--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-test
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>katpiv</title>
+	<link rel="stylesheet" href="css/main.css">
+</head>
+<body>
+	<header class="home-page">
+		<section class="home-page-sidebar">
+			<ul class="home-page-sidebar-logo">
+				<li class="home-page-sidebar-logo__name">
+					Екатерина
+				</li>
+				<li class="home-page-sidebar-logo__direction">
+					история
+				</li>
+				<li class="home-page-sidebar-logo__surname">
+					Пивоварова
+				</li>
+			</ul>
+
+			<ul class="home-page-sidebar-menu">
+				<li class="home-page-sidebar-menu-item"><a href="#" class="home-page-sidebar-menu-item__link">Главная</a></li>
+				<li class="home-page-sidebar-menu-item"><a href="#" class="home-page-sidebar-menu-item__link">Карточки и Таблицы</a></li>
+				<li class="home-page-sidebar-menu-item"><a href="#" class="home-page-sidebar-menu-item__link">Тесты</a></li>
+				<li class="home-page-sidebar-menu-item"><a href="#" class="home-page-sidebar-menu-item__link">Контакты</a></li>
+			</ul>
+
+			<ul class="home-page-sidebar-contacts">
+				<li class="home-page-sidebar-contacts__e-mail">
+					ekat.piv@gmail.com
+				</li>
+				<li class="home-page-sidebar-contacts__number">
+					+7 (985) 185-09-95
+				</li>
+				<li class="home-page-sidebar-contacts__instagram">
+					<a href="https://www.instagram.com/rich_hist/?hl=ru" class="home-page-sidebar-contacts__instagram__link">
+						@rich_hist
+					</a>	
+				</li>
+			</ul>
+		</section>
+	</header>
+</body>
+</html>
